● Show staged changes (shell)   │ cd /Users/ashvinijangid/Desktop/Project/learn && git --no-pager diff --staged --stat && echo ---   │ && git --no-pager diff --staged   └ 13 lines…
● Show staged diff stat summary (shell)
  │ cd /Users/ashvinijangid/Desktop/Project/learn && git --no-pager diff --staged --stat | tail -100
  └ 101 lines…

✗ List content topics changed (shell)
  │ cd /Users/ashvinijangid/Desktop/Project/learn && git --no-pager diff --staged --stat -- content/
  │ | grep -v index.html | awk '{print $1}' | sed 's/content\///;s/\/.*//' | sort -u | head -50
  └ Permission denied and could not request permission from user

✗ List content topics changed (shell)
  │ cd /Users/ashvinijangid/Desktop/Project/learn && git --no-pager diff --staged --name-only --
  │ content/ > /tmp/content_changed.txt; wc -l /tmp/content_changed.txt; cut -d/ -f2
  │ /tmp/content_changed.txt | sort -u
  └ Permission denied and could not request permission from user

● List content changed files (shell)
  │ cd /Users/ashvinijangid/Desktop/Project/learn && git diff --staged --name-only -- content/ 2>&1
  │ | head -5
  └ 6 lines…

● Unique content topics changed (shell)
  │ cd /Users/ashvinijangid/Desktop/Project/learn && git diff --staged --name-only -- content/ 2>&1
  │ | cut -d/ -f2 | sort -u
  └ 15 lines…

Broad content update across many language tracks plus rebuilt static docs and dependency bump.

feat(content): expand curriculum with code-wrapper blocks across bash, css, dart, go, js, linux, lua, prompt-engineering, python, react, rust, scala, sql, vue; rebuild docs and bump deps