@@ -1,438 +1,238 @@
-# 01 — Getting Started
+---
+title: Scala — Toolchain, Project Layout & JVM Execution Model
+description: Production Scala 3 toolchain setup — scala-cli, sbt, Coursier, mill, compiler phases, JVM bytecode mapping, and project scaffolding patterns used in real codebases.
+---
 
-## What is Scala?
+# 01 — Toolchain, Project Layout & JVM Execution Model
 
-Scala is a **statically-typed, compiled language that runs on the JVM**. It combines:
-- **Object-oriented programming** (classes, inheritance, polymorphism)
-- **Functional programming** (first-class functions, immutability, pattern matching)
-- **Type inference** (you rarely write types explicitly)
-- **Interoperability** with Java (use any Java library)
+## Compiler Pipeline: `.scala` → JVM Bytecode
 
-Scala is used in:
-- Data engineering (Apache Spark, Apache Kafka)
-- Backend services (Twitter, LinkedIn, Databricks)
-- Distributed systems (Akka, ZIO)
-- Compilers and build tools (scalac, sbt)
-
-## Installation
-
-Install **Java 11+** first:
+```scala
+// scalac pipeline (what actually happens):
+//   .scala → [parser] → AST → [typer] → typed AST → [uncurry] → [lazyVals]
+//          → [cleanup] → [jvm] → .class bytecode
+//
+// Each phase is observable:
+//   scalac -Xshow-class Simple.scala       // show class output
+//   scalac -Xprint:typer Simple.scala      // dump typed AST after typer phase
+//   scalac -Xprint:delambdafy Simple.scala // see how lambdas become classes
+```
 
 ::code-wrapper{language="bash"}
 ```bash
-# Check Java
-java -version
+# Inspect what scalac emits — object becomes a final class with MODULE$ singleton
+scalac -Xprint:jvm Hello.scala 2>&1 | head -40
+
+# Decompilation with javap reveals the JVM-level representation:
+#   object Config  →  public final class Config$  with static MODULE$ field
+#   def greet      →  public String greet(String)
+#   val timeout    →  private final int timeout; public int timeout()
 ```
 ::
 
-Then install **Scala**:
+## scala-cli — Single-File & Scripting
+
+::code-wrapper{language="scala"}
+```scala
+//> using scala 3.3.3
+//> using dep com.typesafe::config:1.4.3
+
+import com.typesafe.config.ConfigFactory
+
+@main def run(path: String = "application.conf"): Unit =
+  val cfg = ConfigFactory.load(path)
+  println(cfg.getString("app.name"))
+  // scala-cli uses 'using' directives at file top — pinned Scala version,
+  // deps, and JVM version are resolved via Coursier under the hood.
+  // No build.sbt needed; ideal for CLIs, scripts, prototyping.
+```
+::
 
 ::code-wrapper{language="bash"}
 ```bash
-# macOS
-brew install scala
-
-# Ubuntu/Debian
-sudo apt-get install scala
-
-# Windows
-# Download from https://www.scala-lang.org/download/
+scala-cli run .                        # run all .scala in directory
+scala-cli run . -- --watch             # recompile on change
+scala-cli package . --executable -o app # fat JAR / native-image GraalVM
+scala-cli repl                         # REPL with project deps on classpath
 ```
 ::
 
-Verify:
-::code-wrapper{language="bash"}
-```bash
-scala -version    # Scala 3.x.x
-```
-::
-
-## Your First Program
-
-Create `hello.scala`:
+## sbt — Multi-Module Build
 
 ::code-wrapper{language="scala"}
 ```scala
-object Main {
-  def main(args: Array[String]): Unit = {
-    println("Hello, World!")
-  }
-}
+// build.sbt — production layout with cross-building and strict settings
+ThisBuild / scalaVersion := "3.3.3"
+ThisBuild / organization := "com.acme"
+ThisBuild / version      := sys.env.getOrElse("APP_VERSION", "0.1.0-SNAPSHOT")
+
+// Compile-time fatal warnings, unused-symbol detection
+ThisBuild / scalacOptions ++= Seq(
+  "-deprecation", "-feature", "-unchecked",
+  "-Wunused:all", "-Werror",        // fail build on warnings
+  "-explain",                        // human-readable type error explanations
+  "-new-syntax", "-indent"           // Scala 3 braces-optional syntax
+)
+
+// Parallel cross-build across Scala 2.13 + 3.x for library publishing
+lazy val core = crossProject(JVMPlatform, JSPlatform)
+  .crossType(CrossType.Pure)
+  .settings(
+    libraryDependencies ++= Seq(
+      "org.typelevel" %% "cats-core" % "2.10.0",
+      "org.scalameta" %% "munit"     % "1.0.0" % Test
+    )
+  )
+
+lazy val app = project
+  .dependsOn(core.jvm)
+  .enablePlugins(JavaAppPackaging)   // sbt-native-packager → Debian/RPM/Docker
 ```
 ::
-
-Compile and run:
-
-::code-wrapper{language="bash"}
-```bash
-scalac hello.scala
-scala MainKt
-```
-::
-
-Or use **scala-cli** (simpler):
 
 ::code-wrapper{language="bash"}
 ```bash
-# Install scala-cli
-brew install scala-cli
-
-# Create and run
-scala-cli hello.scala
+sbt compile              # incremental compile — only recompiles changed closure
+sbt ~compile             # watch mode — recompile on save
+sbt "coreJS/fastLinkJS"  # Scala.js fast-opt for dev
+sbt release              # cross-publish with signed artifacts (sbt-release)
+sbt dependencyTree       # visualize transitive dependency graph
 ```
 ::
 
-With `scala-cli`, you can use a simpler syntax:
+## Bytecode Reality: Scala Constructs on the JVM
 
 ::code-wrapper{language="scala"}
 ```scala
-// hello.scala (no object/main needed with scala-cli)
-println("Hello, World!")
+// What Scala emits at the bytecode level — critical for interop & perf:
+
+object Config:                          // → final class Config$ with static MODULE$
+  val timeout: Int = 5000               // → private static int + static getter
+  def url: String = "https://api.x"     // → public static String url()
+
+case class Point(x: Int, y: Int)        // → public final class Point
+  // Auto-generated: apply, unapply, copy, equals, hashCode, toString, productElementNames
+  // equals() uses field-by-field comparison — no reference identity
+  // hashCode() uses MurmurHash3.productHash — consistent with equals
+
+enum Color(val hex: Int):               // → sealed abstract class Color with nested finals
+  case Red extends Color(0xFF0000)      // → public static final Color Red
+  case Blue extends Color(0x0000FF)
+
+extension (s: String)                   // → static method with String as first param
+  def slug: String = s.toLowerCase.replaceAll("[^a-z0-9]+", "-")
+  // From Java: StringOps$.MODULE$.slug$extension("Hello World")
 ```
 ::
-
-## The Scala REPL (Interactive Prompt)
-
-Start the interactive prompt:
 
 ::code-wrapper{language="bash"}
 ```bash
-scala
-scala> val x = 5
-val x: Int = 5
+# Verify what Java sees when calling Scala — critical for cross-language teams
+javap -p -c target/scala-3.3.3/classes/com/acme/Point.class | head -60
 
-scala> val greeting = s"Hello, $x people"
-val greeting: String = "Hello, 5 people"
-
-scala> :quit
+# javap output shows:
+#   public int x();                    — getter (Scala 3: no () on val access)
+#   public Point copy(int, int);       — generated copy
+#   public boolean equals(java.lang.Object); — value-based equals
+#   public int hashCode();             — MurmurHash3
 ```
 ::
 
-Useful REPL commands:
-- `:quit` or `:exit` — exit
-- `:load file.scala` — load a file
-- `:paste` — multi-line input
-- `:help` — show all commands
-
-## Project Structure (sbt)
-
-Scala projects use **sbt** (Scala Build Tool). Create a minimal project:
+## Project Layout — Production Structure
 
 ::code-wrapper{language="bash"}
 ```bash
-# Install sbt
-brew install sbt
-
-# Create project structure
-mkdir myproject
-cd myproject
-mkdir -p src/main/scala
+# Standard multi-module sbt project
+my-service/
+├── build.sbt
+├── project/
+│   ├── build.properties               # sbt version pin: sbt.version=1.9.8
+│   └── plugins.sbt                    # sbt-native-packager, sbt-jmh, etc.
+├── modules/
+│   ├── core/
+│   │   └── src/{main,test}/scala/com/acme/core/
+│   ├── domain/
+│   │   └── src/main/scala/com/acme/domain/   # pure ADTs, no I/O deps
+│   └── infra/
+│       └── src/main/scala/com/acme/infra/    # DB, HTTP clients, side-effects
+├── app/
+│   └── src/main/scala/com/acme/Main.scala    # thin composition root
+└── .jvmopts                                    # -Xmx2g -XX:+UseZGC
 ```
 ::
 
-Create `build.sbt`:
-
-::code-wrapper{language="scala"}
-scalaVersion := "3.3.0"
-name := "myapp"
-version := "0.1.0"
-```
-::
-
-Create `src/main/scala/Main.scala`:
-
-::code-wrapper{language="scala"}
-@main def hello() =
-  println("Hello from sbt!")
-```
-::
-
-Run with:
-
-::code-wrapper{language="bash"}
-```bash
-sbt run
-```
-::
-
-## Comments
+## 🔍 Spot the Bug — Incremental Compilation Staleness
 
 ::code-wrapper{language="scala"}
 ```scala
-// Single-line comment
+// Symptom: sbt says "compiling 0 files" but you changed a trait method
+// signature that downstream modules use. Tests fail with NoSuchMethodError.
 
-/* Multi-line comment
-   can span lines */
+// Root cause: sbt's incremental compiler tracks API signatures, but
+// renaming a method while keeping the same erased signature (e.g.
+// def process(items: List[Int]) → def process(items: Seq[Int]))
+// can miss the downstream recompile because the erased signature is
+// identical (List → Seq both erase to scala.collection.immutable.Seq).
 
-/* Nested comments are allowed
-   /* like this */
-*/
-```
-::
-
-## Basic Syntax
-
-::code-wrapper{language="scala"}
-```scala
-// Variable declarations
-val name = "Alice"                    // immutable (preferred)
-var count = 0                         // mutable
-count = 1
-
-// Types (usually inferred, but explicit here)
-val age: Int = 30
-val pi: Double = 3.14159
-val active: Boolean = true
-
-// String interpolation
-val greeting = s"Hello, $name"        // "Hello, Alice"
-val msg = s"Age: ${age + 1}"         // "Age: 31"
-
-// Expressions (if returns a value)
-val max = if (age > 18) "adult" else "minor"
-
-// Functions
-def add(a: Int, b: Int): Int = a + b
-val result = add(5, 3)                // 8
-
-// Lambda (anonymous function)
-val double = (x: Int) => x * 2
-double(5)                              // 10
-
-// Collections
-val numbers = List(1, 2, 3)
-val person = Map("name" -> "Alice", "age" -> 30)
-val unique = Set(1, 2, 2, 3)          // Set(1, 2, 3)
-```
-::
-
-## From Java to Scala
-
-If you know Java, here are key differences:
-
-| Java | Scala |
-|---|---|
-| `public static void main(String[] args) {}` | `@main def hello() = println(...)` |
-| `int x = 5;` | `val x = 5` or `val x: Int = 5` |
-| `new ArrayList<>()` | `scala.collection.mutable.ArrayBuffer()` |
-| `new HashMap<>()` | `scala.collection.mutable.Map()` |
-| `if (...) { } else { }` | `if (...) ... else ...` (expression) |
-| `for (int i = 0; i < n; i++)` | `for (i <- 0 until n)` |
-| `Optional<T>` | `Option[T]` |
-| Null checks | Pattern matching with `Option` |
-| Getters/setters | Properties (properties are generated) |
-
-## Package and Import
-
-Organize code with packages:
-
-::code-wrapper{language="scala"}
-```scala
-// src/main/scala/com/example/Utils.scala
-package com.example
-
-object Utils {
-  def greet(name: String) = s"Hello, $name"
-}
-
-// src/main/scala/com/example/Main.scala
-package com.example
-
-object Main {
-  def main(args: Array[String]): Unit = {
-    println(Utils.greet("Alice"))
-  }
-}
-```
-::
-
-Import with:
-
-::code-wrapper{language="scala"}
-```scala
-import com.example.Utils
-import scala.math._                    // import all from scala.math
-import scala.collection.mutable.{Map, Set}  // selective import
-```
-::
-
-## Standard Library Highlights
-
-::code-wrapper{language="scala"}
-```scala
-// Collections
-List(1, 2, 3).map(_ * 2)              // List(2, 4, 6)
-(1 to 10).filter(_ % 2 == 0)          // Range of even numbers
-Set(1, 2, 3).contains(2)              // true
-Map("a" -> 1).get("a")                // Some(1)
-
-// String operations
-"hello".toUpperCase()                 // "HELLO"
-"hello world".split(" ")              // Array("hello", "world")
-"hello".length                        // 5
-
-// Math
-scala.math.abs(-5)                    // 5
-scala.math.sqrt(16)                   // 4.0
-scala.math.max(1, 5)                  // 5
-
-// Option (null safety)
-Option(value).getOrElse(default)
-Some(5).map(_ * 2)                    // Some(10)
-None.getOrElse(0)                     // 0
-```
-::
-
-## Common Patterns
-
-### Pattern Matching
-
-::code-wrapper{language="scala"}
-```scala
-val x = 5
-val result = x match {
-  case 1 => "one"
-  case 2 => "two"
-  case n if n > 10 => "big"
-  case _ => "other"
-}
-```
-::
-
-### For Loops (Comprehensions)
-
-::code-wrapper{language="scala"}
-```scala
-for (i <- 1 to 5) println(i)          // 1 to 5
-for (i <- 1 until 5) println(i)       // 1 to 4
-for (x <- List(1, 2, 3)) println(x)   // iterate list
-
-// With conditions
-for (i <- 1 to 10 if i % 2 == 0)
-  println(i)
-
-// Nested
-for {
-  x <- 1 to 3
-  y <- 1 to 3
-} println(s"$x,$y")
-```
-::
-
-### Functional Operations
-
-::code-wrapper{language="scala"}
-```scala
-val nums = List(1, 2, 3, 4, 5)
-
-nums.map(_ * 2)                       // List(2, 4, 6, 8, 10)
-nums.filter(_ > 2)                    // List(3, 4, 5)
-nums.fold(0)(_ + _)                   // 15 (sum)
-nums.find(_ > 3)                      // Some(4)
-nums.exists(_ > 4)                    // true
-nums.forall(_ > 0)                    // true
-```
-::
-
-## 💡 Tips & Tricks
-
-**Use type aliases for readability**: `type Config = Map[String, String]` makes code clearer.
-
-**Prefer pattern matching over `instanceof`**: Scala's pattern matching is exhaustiveness-checked by the compiler. It's safer than Java's casting.
-
-**Use `case class` for data**: Quick way to define data containers with equality, hashing, and pattern matching built-in.
-
-::code-wrapper{language="scala"}
-```scala
-case class Person(name: String, age: Int)
-val alice = Person("Alice", 30)
-alice.name           // "Alice"
-```
-::
-
-**Leverage type inference**: Scala infers types from context. Annotations are mainly for clarity or API boundaries.
-
-**Immutable collections by default**: Use `List`, `Map`, `Set` (immutable). Mutable versions are in `scala.collection.mutable`.
-
-## ⚠️ Edge Cases & Gotchas
-
-**`.toInt` on non-numeric String throws**: Use `.toIntOption` for safe conversion.
-
-::code-wrapper{language="scala"}
-```scala
-"abc".toInt                           // NumberFormatException
-"abc".toIntOption                     // None
-"42".toIntOption                      // Some(42)
-```
-::
-
-**Tuple indices are 1-based (like Lua, unlike arrays)**: `(1, 2, 3)._1` is the first element, not `._0`. This confuses everyone.
-
-::code-wrapper{language="scala"}
-```scala
-val t = ("a", "b", "c")
-t._1                                  // "a" (not ._0)
-t._2                                  // "b"
-```
-::
-
-**`==` calls `equals()`, not reference equality**: If you need reference equality, use `eq`:
-
-::code-wrapper{language="scala"}
-```scala
-val a = new String("hello")
-val b = new String("hello")
-a == b                                // true (value equality)
-a eq b                                // false (reference equality)
-```
-::
-
-**Default arguments are evaluated once**: Avoid mutable defaults.
-
-::code-wrapper{language="scala"}
-```scala
-def bad(items: scala.collection.mutable.ArrayBuffer[Int] = scala.collection.mutable.ArrayBuffer()) { }
-```
-::
-
-**Variance gotcha**: `List[Dog]` is not a subtype of `List[Animal]`, even if `Dog <: Animal`. Use `List[Animal]` if you need flexibility (covariance).
-
-## 🧠 Spot the Bug
-
-What does this print?
-
-::code-wrapper{language="scala"}
-```scala
-val nums = List(1, 2, 3)
-val result = nums.map { x =>
-  if (x > 1) x * 2
-  else x
-}
-println(result)
+// Fix: force clean for erased-signature changes
+//   sbt clean compile
+// Or use Zinc's stronger analysis:
+//   incOptions ~= (_.withRecompileAllFraction(1.0))
 ```
 ::
 
 <details>
 <summary>Answer</summary>
 
-Prints `List(1, 4, 6)`.
+The `NoSuchMethodError` at runtime happens because Zinc (sbt's incremental compiler) uses **name + erased signature** for staleness detection. When two different source-level signatures erase to the same bytecode signature, Zinc doesn't detect the change in downstream modules.
 
-Here's why:
-- `1 > 1` is false, so `if` returns `1`
-- `2 > 1` is true, so `2 * 2 = 4`
-- `3 > 1` is true, so `3 * 2 = 6`
-
-**The lesson**: `if` is an expression in Scala (not a statement). It always returns a value, even if you don't explicitly return.
+**Fix**: Run `sbt clean compile` for signature-level refactors, or configure `incOptions` with stricter recompile triggers in `build.sbt`.
 
 </details>
 
-## Next Steps
+## 💡 Tips & Tricks
 
-1. Learn **variables and data types** (02)
-2. Learn **functions** (03)
-3. Learn **collections** (04)
-4. Learn **pattern matching** (05)
-5. Explore **OOP** (classes, inheritance, traits)
-6. Explore **FP** (higher-order functions, monads, for-comprehensions)
-7. Try **Scala CLI** for quick scripting
-8. Join the Scala community (forums, Discord)
+**`-Xprint:typer` for debugging type inference failures**: The compiler dumps the fully-typed AST — you see exactly what types it inferred at each step, exposing where inference diverges from your expectation.
+
+::code-wrapper{language="bash"}
+```bash
+# Show typed AST to debug "found vs required" errors
+scala-cli compile . --scalac-option "-Xprint:typer" 2>&1 | grep -A5 "myMethod"
+```
+::
+
+**Coursier for reproducible toolchain**: Use `cs` (Coursier) to bootstrap Scala, sbt, and scalafmt — avoids Homebrew version drift across CI machines.
+
+::code-wrapper{language="bash"}
+```bash
+# Pin everything via Coursier — CI uses identical versions
+cs install scala3 sbt scalafmt
+cs launch scalafmt:3.8.3 -- --test src/   # format check in CI
+```
+::
+
+**`-explain` in Scala 3 gives human-readable type errors**: Far more actionable than the terse Scala 2 messages.
+
+## ⚠️ Edge Cases & Gotchas
+
+**Scala 2 and Scala 3 cannot share the same binary artifact**: Scala 2.13 and 3.x have different TASTy/classfile formats. For cross-published libraries, use `%%` (cross-built) not `%%` with a hardcoded version.
+
+**`object` initialization is lazy**: The `MODULE$` singleton initializes on first access, not at class-load time. Side effects in `object` bodies run at an unpredictable time — use `@main` or explicit initialization.
+
+**`-Werror` + Scala 2 macro libraries**: Macro expansions can produce warnings that become errors. Use `-Wconf:cat=unused:silent` to suppress warnings from generated code.
+
+**JVM target mismatch**: If `scalaVersion` targets JVM 17 but your `JAVA_HOME` is JDK 11, `sbt` fails with `UnsupportedClassVersionError`. Pin `javaOptions` and `fork := true` to control the JVM version sbt uses for running.
+
+## 🧠 Quick Quiz
+
+What does `scalac -Xprint:delambdafy` show, and why does it matter for performance?
+
+<details>
+<summary>Answer</summary>
+
+`-Xprint:delambdafy` shows how the compiler desugars lambdas (`x => x * 2`) into JVM constructs:
+- **Non-capturing lambdas** → a singleton `$$Lambda$` object (zero allocation per call).
+- **Capturing lambdas** → a new `$$Lambda$` instance per invocation, capturing free variables as fields.
+
+This matters for hot paths: a lambda capturing `this` allocates on every call. In performance-critical code, hoist the lambda to a `val` or use a non-capturing method reference.
+</details>
